<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_neighbour_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:http="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.neighbour_list.NeighbourDetailActivity">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:elevation="1dp">

        <ImageView
            android:id="@+id/detail_avatar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_baseline_person_outline_24" />

        </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-65dp"
            android:elevation="30dp"
            android:background="@null"
            android:paddingRight="15dp"
            android:paddingLeft="15dp"
            android:paddingBottom="20dp">

        <TextView
            android:id="@+id/detail_avatar_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:includeFontPadding="false"
            android:text="Name"
            android:textColor="@color/white"
            android:textSize="30sp" />

            <android.support.design.circularreveal.cardview.CircularRevealCardView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:layout_weight="1"
                android:elevation="10dp"
                http:cardCornerRadius="30dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="40dp"
                android:layout_gravity="fill"
                android:layout_marginBottom="10dp">

                <ImageButton
                    android:id="@+id/detail_favorite_button"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:background="@drawable/round_button"
                    android:elevation="20dp"
                    android:src="@drawable/ic_star_border_gold_24dp" />

            </android.support.design.circularreveal.cardview.CircularRevealCardView>


        </RelativeLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-60dp"
            android:background="#ECEFF0"
            android:orientation="vertical">

            <android.support.design.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                http:cardBackgroundColor="@android:color/white"
                http:cardElevation="5dp"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/detail_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Name"
                        android:textSize="20sp"
                        android:layout_margin="15dp"
                        android:textColor="@color/black"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="#ECEFF0" />

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/detail_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Adress"
                        android:layout_margin="10dp"
                        android:drawableLeft="@drawable/ic_baseline_location_on_24"
                        android:drawablePadding="10dp"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/detail_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="+33 0 00 00 00 00"
                        android:layout_margin="10dp"
                        android:drawableLeft="@drawable/ic_baseline_phone_24"
                        android:drawablePadding="10dp"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:id="@+id/detail_website"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="www.facebook.com"
                        android:layout_margin="10dp"
                        android:drawableLeft="@drawable/ic_baseline_public_24"
                        android:drawablePadding="10dp"/>

                </LinearLayout>


            </android.support.design.card.MaterialCardView>

            <android.support.design.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                http:cardBackgroundColor="@android:color/white"
                http:cardElevation="5dp"
                android:layout_margin="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="A propos de moi"
                        android:textSize="20sp"
                        android:layout_margin="10dp"
                        android:textColor="@color/black"
                        />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:background="#ECEFF0" />

                    <TextView
                        android:id="@+id/detail_about"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Pas de présentation disponible"
                        android:layout_margin="15dp"/>

                </LinearLayout>

            </android.support.design.card.MaterialCardView>

        </LinearLayout>

</LinearLayout>